@@ -1,84 +1,54 @@
 package com.depromeet.domains.user.service;
 
+import com.depromeet.domains.item.dto.UserItemCount;
 import com.depromeet.domains.item.repository.ItemRepository;
-import com.depromeet.domains.level.LevelUpdatePolicy;
-import com.depromeet.domains.level.LevelUpdatePolicyImpl;
+import com.depromeet.domains.level.LevelUpdater;
 import com.depromeet.domains.popup.service.PopupService;
-import com.depromeet.domains.user.UserItemDto;
-import com.depromeet.domains.user.repository.UserLevelRepository;
 import com.depromeet.domains.user.repository.UserRepository;
+import com.depromeet.level.data.LevelPolicy;
 import com.depromeet.user.User;
-import com.depromeet.user.UserLevel;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class UserService {
 
-	public static final int LEVEL_ONE = 1;
-	public static final int LEVEL_TWO = 2;
-	public static final int LEVEL_THREE = 3;
-
 	private final UserRepository userRepository;
-	private final UserLevelRepository userLevelRepository;
 	private final ItemRepository itemRepository;
-	private final Map<Integer, LevelUpdatePolicy> levelUpdatePolicies;
 	private final PopupService popupService;
-
-	public UserService(UserRepository userRepository, UserLevelRepository userLevelRepository, ItemRepository itemRepository, PopupService popupService) {
-		this.userRepository = userRepository;
-		this.userLevelRepository = userLevelRepository;
-		this.itemRepository = itemRepository;
-		levelUpdatePolicies = createLevelUpdatePolicies();
-		this.popupService = popupService;
-	}
-
-	private Map<Integer, LevelUpdatePolicy> createLevelUpdatePolicies() {
-		Map<Integer, LevelUpdatePolicy> policies = new HashMap<>();
-		policies.put(LEVEL_ONE, new LevelUpdatePolicyImpl(0, 4, getUserLevelById(1L)));
-		policies.put(LEVEL_TWO, new LevelUpdatePolicyImpl(5, 24, getUserLevelById(2L)));
-		policies.put(LEVEL_THREE, new LevelUpdatePolicyImpl(25, 55, getUserLevelById(3L)));
-		return policies;
-	}
-
-	private UserLevel getUserLevelById(long userLevelId) {
-		return userLevelRepository.findUserLevelById(userLevelId);
-	}
 
 	@Transactional
 	public void updateLevel() {
-		List<User> usersToUpdateLevel = new ArrayList<>();
-		var allUsers = userRepository.findAll();
-		var userIds = allUsers.stream().map(User::getId).collect(Collectors.toList());
-		var userItemDtoList = itemRepository.countItemsByUserIdIn(userIds);
+		var itemUpdateUsers = itemRepository.findAllItemUpdateUser(LocalDateTime.now().minusMinutes(30)).stream().distinct().toList();
 
-		Map<Long, Integer> itemCountMap = userItemDtoList.stream()
-				.collect(Collectors.toMap(UserItemDto::getUserId, UserItemDto::getItemCount));
+		var userIds = itemUpdateUsers.stream().map(User::getId).toList();
+		List<UserItemCount> userItemDtoMap = itemRepository.countItemsByUserIdIn(userIds);
 
-		allUsers.forEach(user -> {
-			var itemCount = itemCountMap.getOrDefault(user.getId(), 0);
-			updateUserLevel(user, itemCount, usersToUpdateLevel);
-		});
-		userRepository.saveAll(usersToUpdateLevel);
-	}
 
-	private void updateUserLevel(User user, Integer itemCount, List<User> usersToUpdateLevel) {
-		for (Map.Entry<Integer, LevelUpdatePolicy> entry : levelUpdatePolicies.entrySet()) {
-			LevelUpdatePolicy policy = entry.getValue();
-			if (policy.isAcceptable(itemCount)) {
-				user.changeLevel(policy.getNewLevel().getId());
-				popupService.createLevelUpPopup(user, policy.getNewLevel().getId());
-				usersToUpdateLevel.add(user);
-				break;
-			}
-		}
+		itemUpdateUsers.forEach(
+				user -> {
+					var userId = user.getId();
+					var itemCount = userItemDtoMap.stream()
+							.filter(dto -> dto.getUserId().equals(userId))
+							.map(UserItemCount::getItemCount)
+							.findFirst()
+							.orElse(null);
+
+					LevelPolicy newLevel = LevelUpdater.getUpdateLevel(itemCount);
+					if (newLevel.getLevel() > user.getUserLevel().getId()) {
+						user.changeLevel(newLevel.getLevel());
+						popupService.createLevelUpPopup(user, newLevel.getLevel());
+					}
+				}
+		);
+
+		userRepository.saveAll(itemUpdateUsers);
 	}
 }
